...
                                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="18"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="example@example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nAo-du-t73">
                                                <rect key="frame" x="0.0" y="44" width="334" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTF"/>
                                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="15"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="g6a-8j-bHr">
...
                                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="18"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="******" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ltb-jg-fn3">
                                                <rect key="frame" x="0.0" y="44" width="334" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTF"/>
                                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="15"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H2W-bW-nTP" customClass="RoundedRectangleButton" customModule="Banchar" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="256" width="334" height="50"/>
                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Jzv-lF-ZE5"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="20"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="loZ-LZ-vqC"/>
                                        </connections>
                                    </button>
...
                                            </label>
                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NZc-Vk-l3f">
                                                <rect key="frame" x="0.0" y="37.5" width="374" height="40"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="London Swift" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e8R-R1-bdW">
                                                        <rect key="frame" x="0.0" y="0.0" width="334" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="addressField"/>
                                                        <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                    </textField>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kPm-iY-0dI">
                                                        <rect key="frame" x="334" y="0.0" width="40" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="locationButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="40" id="jfh-aE-3VQ"/>
...
                    <size key="freeformSize" width="414" height="900"/>
                    <connections>
                        <outlet property="addressTF" destination="e8R-R1-bdW" id="ou8-FS-EpJ"/>
                        <outlet property="extraDetails" destination="16l-0r-VCR" id="aTJ-az-kMx"/>
                        <outlet property="locationButton" destination="kPm-iY-0dI" id="4rM-lR-5hg"/>
                        <outlet property="othersDescription" destination="fCK-6P-Avt" id="UPS-2w-p5g"/>
                        <outlet property="submitButton" destination="711-zC-WVZ" id="nME-0Z-etf"/>
                        <outletCollection property="issueReasons" destination="rmk-fZ-kNA" collectionClass="NSMutableArray" id="oSh-9b-wvS"/>
                        <outletCollection property="issueReasons" destination="of4-Ye-P24" collectionClass="NSMutableArray" id="8Vn-Rh-0nz"/>
                        <outletCollection property="issueReasons" destination="aeV-mb-OyG" collectionClass="NSMutableArray" id="bMk-CY-v4O"/>
                        <outletCollection property="issueReasons" destination="oFZ-e1-JWg" collectionClass="NSMutableArray" id="dkq-Gq-1ov"/>
                        <outletCollection property="issueCheckboxes" destination="59a-tZ-sfT" collectionClass="NSMutableArray" id="hoP-IF-dgq"/>
                        <outletCollection property="issueCheckboxes" destination="irf-3n-Oll" collectionClass="NSMutableArray" id="06S-KV-Ilp"/>
...
