...
        if userVM?.userType == .client {
            barButton.image = UIImage(systemName: "plus")
        } else {
            barButton.title = "Show Reviews"
        }
        barButton.isAccessibilityElement = true
        barButton.accessibilityIdentifier = "requestButton"
    }
    
    func updateTable() {
        requestTable.reloadData()
    }
    
...
